--- a/youxuan.yaml
+++ b/youxuan.yaml
@@ -1,7 +1,7 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash.Meta
-# 创建时间：2024-01-15 00:07:25
+# 创建时间：2024-06-04 20:58:29
 # 使用模版：V2RaySE 默认模版
 # 节点数量：6
 ####################################
@@ -86,81 +86,81 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"VISA HK","type":"vless","server":"www.visa.com.hk","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"0717.tinytool.eu.org","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
-  - {"name":"CSGO","type":"vless","server":"www.csgo.com","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"0717.tinytool.eu.org","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
-  - {"name":"优选1","type":"vless","server":"172.64.168.181","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"0717.tinytool.eu.orgv","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
-  - {"name":"优选2","type":"vless","server":"104.17.227.231","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"0717.tinytool.eu.org","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
-  - {"name":"优选3","type":"vless","server":"156.238.18.160","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"0717.tinytool.eu.org","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
-  - {"name":"优选4","type":"vless","server":"154.92.9.136","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"0717.tinytool.eu.org","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
+  - {"name":"excite","type":"vless","server":"shopping.excite.co.jp","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"cf20230718.hellagohell.workers.dev","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
+  - {"name":" 5ch","type":"vless","server":"5ch.net","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"cf20230718.hellagohell.workers.dev","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
+  - {"name":"fujitsu","type":"vless","server":"fmv.fccl.fujitsu.com","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"cf20230718.hellagohell.workers.dev","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
+  - {"name":"Sony","type":"vless","server":"go.pro.sony.com","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"cf20230718.hellagohell.workers.dev","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
+  - {"name":"VISA HK","type":"vless","server":"www.visa.com.hk","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"cf20230718.hellagohell.workers.dev","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
+  - {"name":"salesforce","type":"vless","server":"investor.salesforce.com","port":2052,"uuid":"6f03a5a9-a99d-4e12-9065-1e8850a03fb5","tls":false,"servername":"cf20230718.hellagohell.workers.dev","network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"cf20230718.hellagohell.workers.dev"}},"client-fingerprint":"randomized"}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -183,12 +183,12 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - excite
+      - ' 5ch'
+      - fujitsu
+      - Sony
       - VISA HK
-      - CSGO
-      - 优选1
-      - 优选2
-      - 优选3
-      - 优选4
+      - salesforce
 
 rules:
 # 本地/局域网地址
